[package]
name = "async_fun"
version = "0.1.0"
authors = ["gavinleroy <gavinleroy6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.7"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
